examples/test/testpolicy14724.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14724
  namespace: namespace284
spec:
  podSelector:
    matchLabels:
      key34: value11
      key18: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value47
          key27: value36
          key3: value6
      podSelector:
        matchLabels:
          key16: value46
          key34: value39
          key41: value23
